initialized 'output' in 'binary_to_dec' to zero

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(computer STATIC transistor.c gates.c alu.c)
-install(TARGETS computer LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib)
+install(TARGETS computer LIBRARY DESTINATION lib/)
