--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.27)
 
-set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
 project(computer)
+set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 
 add_subdirectory(src)
 add_subdirectory(tests)
